--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -10,11 +10,13 @@ nav img {
 nav ul {
   display: flex;
   width: 100%;
-  gap: 20px;
+  gap: 15px;
   margin: 0;
   list-style: none;
   align-items: center;
   justify-content: center;
+  font-family: "Karla", sans-serif;
+  font-weight: 500;
 }
 
 /* nav li {
