--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -14,7 +14,7 @@ nav ul {
   margin: 0;
   list-style: none;
   align-items: center;
-  justify-content: center;
+  justify-content: end;
   font-family: "Karla", sans-serif;
   font-weight: 500;
 }
