--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -25,7 +25,7 @@ section {
   padding-left: 12%;
   margin: 0;
 }
-.hero-text p {
+.hero-text > p {
   font-size: 24px;
   color: #ffffff;
   padding-left: 12%;
@@ -47,7 +47,7 @@ section {
 section img {
   height: 430px;
   border-radius: 10px;
-  margin: 20px 10% 0 10%;
+  margin: 20px 10% 10% 10%;
   justify-items: center;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3);
 }
