--- a/src/pages/BookingDetail.css
+++ b/src/pages/BookingDetail.css
@@ -1,33 +1,38 @@
 .bookingdetail {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
   /* height: 100vh; */
+  gap: 20px;
+  margin: 0 5%;
+  font-family: "Karla", sans-serif;
 }
 
 .contactform {
-  background-color: blanchedalmond;
+  border: 2px solid #495e57;
   border-radius: 10px;
   padding: 0 5%;
   width: 50%;
 }
 
 .contactform > h1 {
-  color: rebeccapurple;
+  color: black;
   text-align: center;
   margin: 15px;
 }
 
 .contactform > button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 18px;
-  padding: 10px;
   margin-top: 15px;
   margin-bottom: 30px;
   margin-left: 20%;
   width: 60%;
-  height: 50px;
+  height: 30px;
   border-radius: 15px;
-  background-color: #f4ce14;
+  background-color: #495e57;
   border-style: none;
   font-family: "Karla", sans-serif;
   font-weight: 700;
@@ -61,4 +66,35 @@ hr {
   border-top: 2px solid gray;
   border-radius: 5px;
   opacity: 0.6;
+}
+
+tabledetail {
+  display: flex;
+  flex-direction: column;
+  padding: 20px 40px;
+  background-color: #495e57;
+  border-radius: 10px;
+  height: 45%;
+}
+
+tabledetail > h1 {
+  font-size: 26px;
+  text-align: center;
+  margin: 0 0 10px 0;
+}
+tabledetail p {
+  margin: 10px 0;
+}
+
+.btn-change {
+  margin-top: 10%;
+  font-size: 18px;
+  height: 30px;
+  width: 100%;
+  border: 0;
+  border-radius: 15px;
+  background-color: #f4ce14;
+  border-style: none;
+  font-family: "Karla", sans-serif;
+  font-weight: 700;
 }
